# distexec

./: .etmpl.yml  .gitignore  AUTHORS  CMakeLists.txt  Description.txt  Doxyfile  README.md  cmdline.ggo.in  config.h.in  indent-all.sh  refactr.rb
cmake/: CPack.txt  MinGW64.toolchain.txt  OSX.toolchain.txt  OldSav.txt
docker/osxcross/: Dockerfile  README.md  build.sh
examples/config/: foreman.cfg  json_log.cfg  ssh.cfg
include/distexec/: distexec.h  error.h  export.h  logger.h  node.h  plugin.h  popen3.h  thread.h  uri.h  util.h
macosx/: distexec.sh
src/: cmdline.c  cmdline.h  copa.c  copa.h  distexec.c  error.c  logger.c  main.c  node.c  plugin.c  popen3.c  thread.c  uri.c  util.c
src/plugins/: dummy.c  exec.c  file.c  foreman.c  ssh.c
tests/: test-popen3.c  test-popen3.sh  test-uri.c
windows/: distexec.bat
